@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam backgroundColor White
skinparam RoundCorner 10
skinparam Shadowing true

skinparam class {
    ArrowColor DarkBlue
    BackgroundColor LightBlue
    BorderColor DarkBlue
}

skinparam note {
    BackgroundColor LightYellow
    BorderColor DarkBlue
}

title Diagrama de clase - Tienda de golosinas

class Tienda {
    - nombreTienda : String
    - nombreDuenio : String
    + cobrar(articulo : Articulo) : double
}

class Empleado {
    - nombre : String
    - horario : String
    + entrarAlTrabajo() : void
    + salirDelTrabajo() : void
}

class Articulo {
    - nombre : String
    - precio : double
    - proveedor : string

}

Tienda "1" o-- "2" Empleado
Tienda "*" o-- "*" Articulo
@enduml